test/spec/simd_align.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/simd_align.wast
(;; STDOUT ;;;
out/test/spec/simd_align.wast:54: assert_invalid passed:
  out/test/spec/simd_align/simd_align.44.wasm:0000022: error: alignment must not be larger than natural alignment (16)
  0000022: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:58: assert_invalid passed:
  out/test/spec/simd_align/simd_align.45.wasm:0000034: error: alignment must not be larger than natural alignment (16)
  0000034: error: OnStoreExpr callback failed
out/test/spec/simd_align.wast:62: assert_invalid passed:
  out/test/spec/simd_align/simd_align.46.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:66: assert_invalid passed:
  out/test/spec/simd_align/simd_align.47.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:70: assert_invalid passed:
  out/test/spec/simd_align/simd_align.48.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:74: assert_invalid passed:
  out/test/spec/simd_align/simd_align.49.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:78: assert_invalid passed:
  out/test/spec/simd_align/simd_align.50.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:82: assert_invalid passed:
  out/test/spec/simd_align/simd_align.51.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadExpr callback failed
out/test/spec/simd_align.wast:86: assert_invalid passed:
  out/test/spec/simd_align/simd_align.52.wasm:0000023: error: alignment must not be larger than natural alignment (1)
  0000023: error: OnLoadSplatExpr callback failed
out/test/spec/simd_align.wast:90: assert_invalid passed:
  out/test/spec/simd_align/simd_align.53.wasm:0000023: error: alignment must not be larger than natural alignment (2)
  0000023: error: OnLoadSplatExpr callback failed
out/test/spec/simd_align.wast:94: assert_invalid passed:
  out/test/spec/simd_align/simd_align.54.wasm:0000023: error: alignment must not be larger than natural alignment (4)
  0000023: error: OnLoadSplatExpr callback failed
out/test/spec/simd_align.wast:98: assert_invalid passed:
  out/test/spec/simd_align/simd_align.55.wasm:0000023: error: alignment must not be larger than natural alignment (8)
  0000023: error: OnLoadSplatExpr callback failed
out/test/spec/simd_align.wast:105: assert_malformed passed:
  out/test/spec/simd_align/simd_align.56.wat:1:35: error: unexpected token align=-1, expected ).
  (memory 1) (func (drop (v128.load align=-1 (i32.const 0))))
                                    ^^^^^^^^
  out/test/spec/simd_align/simd_align.56.wat:1:59: error: unexpected token ), expected EOF.
  (memory 1) (func (drop (v128.load align=-1 (i32.const 0))))
                                                            ^
out/test/spec/simd_align.wast:111: assert_malformed passed:
  out/test/spec/simd_align/simd_align.57.wat:1:35: error: alignment must be power-of-two
  (memory 1) (func (drop (v128.load align=0 (i32.const 0))))
                                    ^^^^^^^
out/test/spec/simd_align.wast:117: assert_malformed passed:
  out/test/spec/simd_align/simd_align.58.wat:1:35: error: alignment must be power-of-two
  (memory 1) (func (drop (v128.load align=7 (i32.const 0))))
                                    ^^^^^^^
out/test/spec/simd_align.wast:123: assert_malformed passed:
  out/test/spec/simd_align/simd_align.59.wat:1:30: error: unexpected token align=-1, expected ).
  (memory 1) (func (v128.store align=-1 (i32.const 0) (v128.const i32x4 0 0 0 0)))
                               ^^^^^^^^
  out/test/spec/simd_align/simd_align.59.wat:1:80: error: unexpected token ), expected EOF.
  (memory 1) (func (v128.store align=-1 (i32.const 0) (v128.const i32x4 0 0 0 0)))
                                                                                 ^
out/test/spec/simd_align.wast:129: assert_malformed passed:
  out/test/spec/simd_align/simd_align.60.wat:1:30: error: alignment must be power-of-two
  (memory 0) (func (v128.store align=0 (i32.const 0) (v128.const i32x4 0 0 0 0)))
                               ^^^^^^^
out/test/spec/simd_align.wast:135: assert_malformed passed:
  out/test/spec/simd_align/simd_align.61.wat:1:30: error: alignment must be power-of-two
  (memory 0) (func (v128.store align=7 (i32.const 0) (v128.const i32x4 0 0 0 0)))
                               ^^^^^^^
out/test/spec/simd_align.wast:141: assert_malformed passed:
  out/test/spec/simd_align/simd_align.62.wat:1:48: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load8x8_s align=-1 (i32.const 0)))
                                                 ^^^^^^^^
  out/test/spec/simd_align/simd_align.62.wat:1:71: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load8x8_s align=-1 (i32.const 0)))
                                                                        ^
out/test/spec/simd_align.wast:147: assert_malformed passed:
  out/test/spec/simd_align/simd_align.63.wat:1:48: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load8x8_s align=0 (i32.const 0)))
                                                 ^^^^^^^
out/test/spec/simd_align.wast:153: assert_malformed passed:
  out/test/spec/simd_align/simd_align.64.wat:1:48: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load8x8_s align=7 (i32.const 0)))
                                                 ^^^^^^^
out/test/spec/simd_align.wast:159: assert_malformed passed:
  out/test/spec/simd_align/simd_align.65.wat:1:48: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load8x8_u align=-1 (i32.const 0)))
                                                 ^^^^^^^^
  out/test/spec/simd_align/simd_align.65.wat:1:71: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load8x8_u align=-1 (i32.const 0)))
                                                                        ^
out/test/spec/simd_align.wast:165: assert_malformed passed:
  out/test/spec/simd_align/simd_align.66.wat:1:48: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load8x8_u align=0 (i32.const 0)))
                                                 ^^^^^^^
out/test/spec/simd_align.wast:171: assert_malformed passed:
  out/test/spec/simd_align/simd_align.67.wat:1:48: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load8x8_u align=7 (i32.const 0)))
                                                 ^^^^^^^
out/test/spec/simd_align.wast:177: assert_malformed passed:
  out/test/spec/simd_align/simd_align.68.wat:1:49: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load16x4_s align=-1 (i32.const 0)))
                                                  ^^^^^^^^
  out/test/spec/simd_align/simd_align.68.wat:1:72: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load16x4_s align=-1 (i32.const 0)))
                                                                         ^
out/test/spec/simd_align.wast:183: assert_malformed passed:
  out/test/spec/simd_align/simd_align.69.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load16x4_s align=0 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:189: assert_malformed passed:
  out/test/spec/simd_align/simd_align.70.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load16x4_s align=7 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:195: assert_malformed passed:
  out/test/spec/simd_align/simd_align.71.wat:1:49: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load16x4_u align=-1 (i32.const 0)))
                                                  ^^^^^^^^
  out/test/spec/simd_align/simd_align.71.wat:1:72: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load16x4_u align=-1 (i32.const 0)))
                                                                         ^
out/test/spec/simd_align.wast:201: assert_malformed passed:
  out/test/spec/simd_align/simd_align.72.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load16x4_u align=0 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:207: assert_malformed passed:
  out/test/spec/simd_align/simd_align.73.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load16x4_u align=7 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:213: assert_malformed passed:
  out/test/spec/simd_align/simd_align.74.wat:1:49: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load32x2_s align=-1 (i32.const 0)))
                                                  ^^^^^^^^
  out/test/spec/simd_align/simd_align.74.wat:1:72: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load32x2_s align=-1 (i32.const 0)))
                                                                         ^
out/test/spec/simd_align.wast:219: assert_malformed passed:
  out/test/spec/simd_align/simd_align.75.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32x2_s align=0 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:225: assert_malformed passed:
  out/test/spec/simd_align/simd_align.76.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32x2_s align=7 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:231: assert_malformed passed:
  out/test/spec/simd_align/simd_align.77.wat:1:49: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load32x2_u align=-1 (i32.const 0)))
                                                  ^^^^^^^^
  out/test/spec/simd_align/simd_align.77.wat:1:72: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load32x2_u align=-1 (i32.const 0)))
                                                                         ^
out/test/spec/simd_align.wast:237: assert_malformed passed:
  out/test/spec/simd_align/simd_align.78.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32x2_u align=0 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:243: assert_malformed passed:
  out/test/spec/simd_align/simd_align.79.wat:1:49: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32x2_u align=7 (i32.const 0)))
                                                  ^^^^^^^
out/test/spec/simd_align.wast:249: assert_malformed passed:
  out/test/spec/simd_align/simd_align.80.wat:1:50: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load8_splat align=-1 (i32.const 0)))
                                                   ^^^^^^^^
  out/test/spec/simd_align/simd_align.80.wat:1:73: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load8_splat align=-1 (i32.const 0)))
                                                                          ^
out/test/spec/simd_align.wast:255: assert_malformed passed:
  out/test/spec/simd_align/simd_align.81.wat:1:50: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load8_splat align=0 (i32.const 0)))
                                                   ^^^^^^^
out/test/spec/simd_align.wast:261: assert_malformed passed:
  out/test/spec/simd_align/simd_align.82.wat:1:51: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load16_splat align=-1 (i32.const 0)))
                                                    ^^^^^^^^
  out/test/spec/simd_align/simd_align.82.wat:1:74: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load16_splat align=-1 (i32.const 0)))
                                                                           ^
out/test/spec/simd_align.wast:267: assert_malformed passed:
  out/test/spec/simd_align/simd_align.83.wat:1:51: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load16_splat align=0 (i32.const 0)))
                                                    ^^^^^^^
out/test/spec/simd_align.wast:273: assert_malformed passed:
  out/test/spec/simd_align/simd_align.84.wat:1:51: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load32_splat align=-1 (i32.const 0)))
                                                    ^^^^^^^^
  out/test/spec/simd_align/simd_align.84.wat:1:74: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load32_splat align=-1 (i32.const 0)))
                                                                           ^
out/test/spec/simd_align.wast:279: assert_malformed passed:
  out/test/spec/simd_align/simd_align.85.wat:1:51: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32_splat align=0 (i32.const 0)))
                                                    ^^^^^^^
out/test/spec/simd_align.wast:285: assert_malformed passed:
  out/test/spec/simd_align/simd_align.86.wat:1:51: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load32_splat align=3 (i32.const 0)))
                                                    ^^^^^^^
out/test/spec/simd_align.wast:291: assert_malformed passed:
  out/test/spec/simd_align/simd_align.87.wat:1:51: error: unexpected token align=-1, expected ).
  (memory 1) (func (result v128) (v128.load64_splat align=-1 (i32.const 0)))
                                                    ^^^^^^^^
  out/test/spec/simd_align/simd_align.87.wat:1:74: error: unexpected token ), expected EOF.
  (memory 1) (func (result v128) (v128.load64_splat align=-1 (i32.const 0)))
                                                                           ^
out/test/spec/simd_align.wast:297: assert_malformed passed:
  out/test/spec/simd_align/simd_align.88.wat:1:51: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load64_splat align=0 (i32.const 0)))
                                                    ^^^^^^^
out/test/spec/simd_align.wast:303: assert_malformed passed:
  out/test/spec/simd_align/simd_align.89.wat:1:51: error: alignment must be power-of-two
  (memory 1) (func (result v128) (v128.load64_splat align=7 (i32.const 0)))
                                                    ^^^^^^^
54/54 tests passed.
;;; STDOUT ;;)
